<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/card_view"
android:layout_width="match_parent"
android:layout_height="wrap_content"
card_view:cardCornerRadius="10dp"
card_view:cardElevation="10dp"
card_view:cardUseCompatPadding="true">


    <AbsoluteLayout
        android:layout_width="316dp"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:visibility="visible">


        <TextView
            android:id="@+id/ips"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_x="131dp"
            android:layout_y="15dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <TextView
            android:id="@+id/ip"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:layout_x="50dp"
            android:layout_y="18dp"
            android:text="@string/ips"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/marc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="52dp"
            android:layout_y="42dp"
            android:text="@string/Marca"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/marca"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_x="131dp"
            android:layout_y="41dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <TextView
            android:id="@+id/mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="50dp"
            android:layout_y="70dp"
            android:text="@string/Modelo"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/modelo"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_x="132dp"
            android:layout_y="73dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <TextView
            android:id="@+id/tipo"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_x="137dp"
            android:layout_y="154dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <TextView
            android:id="@+id/tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="50dp"
            android:layout_y="153dp"
            android:text="@string/Tipo"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/pla"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:layout_x="46dp"
            android:layout_y="96dp"
            android:text="@string/Placa"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/pro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="48dp"
            android:layout_y="126dp"
            android:text="@string/Propiedad"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/propiedad"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_x="134dp"
            android:layout_y="123dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <TextView
            android:id="@+id/placa"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_x="132dp"
            android:layout_y="98dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat" />


    </AbsoluteLayout>
</android.support.v7.widget.CardView>
